--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "name": "vue-openlayers-map",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.3",
+  "private": false,
+  "main": "lib/vue-openlayers-map.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:clean lib": "rimraf lib",
+    "build:clean dist": "rimraf dist",
+    "build:lib": "vue-cli-service build --target lib --name vue-openlayers-map --dest lib packages/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "ol": "^6.10.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -17,12 +22,14 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "codemirror": "^5.65.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "mockjs": "^1.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
