--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:pp129/vue-openlayers-map"
   }
 }
