--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vue-openlayers-map",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "private": false,
   "main": "lib/vue-openlayers-map.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build:clean lib": "rimraf lib",
-    "build:clean dist": "rimraf dist",
+    "clean:lib": "rimraf lib",
+    "clean:dist": "rimraf dist",
     "build:lib": "vue-cli-service build --target lib --name vue-openlayers-map --dest lib packages/index.js",
     "lint": "vue-cli-service lint"
   },
@@ -33,8 +33,5 @@
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:pp129/vue-openlayers-map"
-  }
+  "repository": "https://github.com/pp129/vue-openlayers-map"
 }
