--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-openlayers-map",
-  "version": "1.0.19",
+  "version": "1.0.20",
   "private": false,
   "main": "lib/vue-openlayers-map.umd.min.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "mockjs": "^1.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11"
   },
   "repository": {
