overlay更新时添加offset属性更新

--- a/.npmignore
+++ b/.npmignore
@@ -5,14 +5,18 @@ dist
 test
 packages
 public
+node_modules
 .babelrc
+.browserslistrc
+.editorconfig
 .eslintrc.js
 .travis.yml
+.idea/
 yarn.lock
-node_modules
 yarn-error.log
 npm-debug.log
 vue.config.js
 babel.config.js
+jsconfig.json
 *.map
 *.zip
