--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   },
   "devDependencies": {
     "@turf/turf": "^6.5.0",
-    "core-js": "^3.6.5",
-    "ol": "^6.10.0",
-    "vue": "^2.6.11",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-transform-remove-debugger": "^6.9.4",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -28,8 +27,10 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "mockjs": "^1.1.0",
+    "ol": "^6.13.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11"
   },
