--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
     "build:lib": "vue-cli-service build --target lib --name vue-openlayers-map --dest lib packages/index.js",
     "lint": "vue-cli-service lint"
   },
-  "devDependencies": {
+  "dependencies": {
+    "mockjs": "^1.1.0",
+    "ol": "^6.13.0",
+    "qs": "^6.10.3",
+    "axios": "^0.26.1",
+    "core-js": "^3.6.5",
     "@turf/turf": "^6.5.0",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-plugin-transform-remove-debugger": "^6.9.4",
-    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "mockjs": "^1.1.0",
-    "ol": "^6.13.0",
-    "qs": "^6.10.3",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11"
   },
