--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vue-openlayers-map",
-  "version": "2.4.8",
+  "version": "2.5.0",
   "private": false,
   "main": "lib/vue-openlayers-map.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "clean:lib": "rimraf lib",
+    "clean:modules": "rimraf node_modules",
     "build:lib": "vue-cli-service build --target lib --name vue-openlayers-map --dest lib packages/index.js",
     "lint": "vue-cli-service lint",
     "docs:dev": "vuepress dev docs",
@@ -14,17 +15,17 @@
     "publish": "npm publish"
   },
   "dependencies": {
-    "@turf/turf": "^6.5.0",
-    "axios": "^0.26.1",
     "core-js": "^3.6.5",
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "vue-server-renderer": "2.6.14",
     "mockjs": "^1.1.0",
     "ol": "^6.13.0",
     "pinyin": "^3.0.0-alpha.4",
     "qs": "^6.10.3",
-    "vue": "^2.6.11",
-    "vue-server-renderer": "2.6.14"
-  },
-  "devDependencies": {
+    "@turf/turf": "^6.5.0",
+    "axios": "^0.26.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -43,9 +44,7 @@
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11",
     "vuepress": "^1.9.7",
-    "vuepress-theme-antdocs": "^1.4.3",
-    "vuepress-theme-reco": "^1.6.13",
-    "vuepress-theme-vdoing": "^1.12.5"
+    "vuepress-theme-antdocs": "^1.4.3"
   },
   "repository": {
     "type": "git",
