--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.4.4",
+  "version": "1.4.6",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run clean:lib && vite build",
     "clean:lib": "rimraf lib",
     "preview": "vite preview",
     "publish": "npm publish"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.1",
     "@types/node": "^18.6.5",
+    "@vitejs/plugin-legacy": "^2.0.1",
     "eslint": "^8.21.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
