--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.5.4",
+  "version": "1.5.7",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -32,10 +32,14 @@
   "dependencies": {
     "@turf/turf": "^6.5.0",
     "axios": "^0.27.2",
+    "cesium": "^1.96.0",
+    "echarts": "^4.9.0",
     "kdbush": "^3.0.0",
     "nanoid": "^4.0.0",
     "ol": "^6.15.1",
+    "ol-echarts": "^2.0.6",
     "ol-ext": "^3.2.30",
+    "olcs": "^2.13.0",
     "pinyin-pro": "^3.11.0",
     "qs": "^6.11.0",
     "vue": "^2.7.8",
