--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.6.15",
+  "version": "1.6.21",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -36,6 +36,7 @@
     "axios": "^0.27.2",
     "echarts": "^4.9.0",
     "kdbush": "^3.0.0",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "ol": "^6.15.1",
     "ol-echarts": "^2.0.6",
