--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.6.21",
+  "version": "1.8.0",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -40,6 +40,7 @@
     "nanoid": "^4.0.0",
     "ol": "^6.15.1",
     "ol-echarts": "^2.0.6",
+    "ol-ext": "^4.0.4",
     "olcs": "^2.13.0",
     "pinyin-pro": "^3.11.0",
     "qs": "^6.11.0",
