feat: 更新demo; feat: v-vector、v-super-cluster 事件绑定机制更新 feat: 内网百度路况图层组件

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.11.0",
+  "version": "1.12.4",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -29,6 +29,7 @@
     "terser": "^5.14.2",
     "vite": "^3.0.9",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-require-transform": "^1.0.12",
     "vite-plugin-vue2": "^2.0.2"
   },
   "dependencies": {
