--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.12.4",
+  "version": "1.12.7",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -46,6 +46,7 @@
     "pinyin-pro": "^3.11.0",
     "qs": "^6.11.0",
     "supercluster": "^8.0.1",
+    "throttle-debounce": "^5.0.0",
     "vue": "^2.7.8",
     "vue-template-compiler": "^2.7.8"
   }
