--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.13.3",
+  "version": "1.13.4",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -37,6 +37,7 @@
     "axios": "^0.27.2",
     "echarts": "^4.9.0",
     "gifler": "^0.1.0",
+    "gyeonghwon": "^0.1.1",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "ol": "^7.3.0",
