--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^3.2.5",
     "terser": "^5.14.2",
     "vite": "^3.0.9",
     "vite-plugin-html": "^3.2.0",
