feat: 新增GeoTIFF类型图层支持

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.13.22",
+  "version": "1.14.0",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib"
@@ -13,20 +13,23 @@
     "build:lib": "npm run clean:lib && vite build --mode lib",
     "clean:lib": "rimraf lib",
     "preview": "vite preview",
-    "publish": "npm publish"
+    "publish": "npm publish",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix --ext .js,.vue src"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.1",
     "@types/node": "^18.6.5",
     "@vitejs/plugin-legacy": "^2.0.1",
-    "eslint": "^8.21.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^3.2.5",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "prettier": "^2.2.1",
     "terser": "^5.14.2",
     "vite": "^3.0.9",
     "vite-plugin-html": "^3.2.0",
@@ -46,6 +49,7 @@
     "ol-echarts": "^2.0.6",
     "ol-ext": "^4.0.4",
     "pinyin-pro": "^3.11.0",
+    "proj4": "^2.11.0",
     "qs": "^6.11.0",
     "simplify-js": "^1.2.4",
     "supercluster": "^8.0.1",
