--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.14.6",
+  "version": "1.14.7",
   "main": "lib/ol-map.umd.js",
   "files": [
-    "lib"
+    "lib",
+    "package.json",
+    "README.md"
   ],
   "scripts": {
     "dev": "vite",
@@ -20,7 +22,6 @@
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.1",
     "@types/node": "^18.6.5",
-    "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
@@ -44,7 +45,6 @@
     "echarts": "^4.9.0",
     "gifler": "^0.1.0",
     "gyeonghwon": "^0.1.1",
-    "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "ol": "^7.5.2",
     "ol-echarts": "^2.0.6",
@@ -54,7 +54,6 @@
     "qs": "^6.11.0",
     "simplify-js": "^1.2.4",
     "supercluster": "^8.0.1",
-    "throttle-debounce": "^5.0.0",
     "vue": "^2.7.8",
     "vue-router": "^3.2.0",
     "vue-template-compiler": "^2.7.8"
