引入storybook作为文档库

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 shamefully-hoist=true
 
 # npm publish时把registry注释掉
-# registry=https://registry.npmmirror.com/
+registry=https://registry.npmmirror.com/
