--- a/package.json
+++ b/package.json
@@ -17,10 +17,21 @@
     "preview": "vite preview",
     "publish": "npm publish",
     "lint": "eslint --ext .js,.vue src",
-    "lint:fix": "eslint --fix --ext .js,.vue src"
+    "lint:fix": "eslint --fix --ext .js,.vue src",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.1",
+    "@storybook/addon-a11y": "7.6.20",
+    "@storybook/addon-essentials": "7.6.20",
+    "@storybook/addon-interactions": "7.6.20",
+    "@storybook/addon-links": "7.6.20",
+    "@storybook/addon-storysource": "7.6.20",
+    "@storybook/blocks": "7.6.20",
+    "@storybook/test": "7.6.20",
+    "@storybook/vue": "7.6.20",
+    "@storybook/vue-vite": "7.6.20",
     "@types/node": "^18.6.5",
     "@vitejs/plugin-legacy": "^2.0.1",
     "@vue/eslint-config-prettier": "^6.0.0",
@@ -30,8 +41,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-storybook": "^0.11.3",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "7.6.20",
     "terser": "^5.14.2",
     "vite": "^3.0.9",
     "vite-plugin-html": "^3.2.0",
