--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "v-ol-map": ["src/packages/index.js"]
     }
   },
   "exclude": ["node_modules", "dist", "lib"]
