--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "v-ol-map",
   "private": false,
-  "version": "1.19.2",
+  "version": "1.19.3",
   "main": "lib/ol-map.umd.js",
   "files": [
     "lib",
@@ -20,7 +20,8 @@
     "lint:fix": "eslint --fix --ext .js,.vue src",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_75b1de4d859122e"
+    "chromatic": "npx chromatic --project-token=chpt_75b1de4d859122e",
+    "ssh-deploy": "ssh-deployer -f deploy.json"
   },
   "devDependencies": {
     "@rollup/plugin-babel": "^5.3.1",
@@ -45,6 +46,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-storybook": "^0.11.3",
     "eslint-plugin-vue": "^6.2.2",
+    "node-ssh-deploy": "^0.0.4",
     "prettier": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
